--- a/composer.json
+++ b/composer.json
@@ -1,2 +1,24 @@
 {
+  "name": "vring/phputil",
+  "type": "library",
+  "description": "php个人常用库",
+  "keywords" : ["vring", "phputil"],
+  "authors": [
+    {
+      "name": "vring",
+      "email": "971626354@qq.com"
+    }
+  ],
+  "require": {
+    "php": ">=7.2.0,<=7.4.9",
+    "ext-pdo": "*",
+    "ext-curl": "*",
+    "ext-pdo_mysql": "*"
+  },
+
+  "autoload": {
+    "psr-4": {
+      "vring\\": "src/"
+    }
+  }
 }
