--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "ext-curl": "*",
     "ext-pdo_mysql": "*"
   },
-  "license":"mit",
+  "license":"Apache-2.0",
   "autoload": {
     "psr-4": {
       "vring\\": "src/"
