--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "ext-pdo": "*",
     "ext-curl": "*",
     "ext-pdo_mysql": "*",
+    "overtrue/wechat": "~5.0",
     "ext-json": "*"
   },
   "license":"Apache-2.0",
